Brain feed update 2026-02-27 21:58 UTC

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
   .tag-build { color: #f60; background: #f6011; border: 1px solid #f6022; }
   .tag-cron { color: #a0f; background: #a0f11; border: 1px solid #a0f22; }
   .tag-thought { color: #555; background: #55511; border: 1px solid #55522; }
+  .tag-contemplation { color: #fc0; background: #fc011; border: 1px solid #fc022; }
 
   .feed-time {
     font-size: 10px;
