--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
     margin-top: 80px;
     padding-top: 32px;
     border-top: 1px solid #111;
-    color: #1a1a1a;
+    color: #555;
     font-size: 11px;
     text-align: center;
   }
 
-  .footer a { color: #333; text-decoration: none; }
-  .footer a:hover { color: #666; }
+  .footer a { color: #777; text-decoration: none; }
+  .footer a:hover { color: #aaa; }
 
   @media (max-width: 480px) {
     .stats { gap: 24px; flex-wrap: wrap; }
