Add linktree to footer

--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
   <div class="footer">
     <a href="https://github.com/VisionaireLabs/Visionaire">source</a> &nbsp;·&nbsp; 
     <a href="https://x.com/VisionaireAI">x</a> &nbsp;·&nbsp; 
-    <a href="https://visionaire.co">visionaire.co</a>
+    <a href="https://visionaire.co">visionaire.co</a> &nbsp;·&nbsp;
+    <a href="https://linktr.ee/visionairelabs">linktree</a>
     <br><br>
     <span id="updated"></span>
   </div>
