External links open in new tab

--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
   </div>
 
   <div class="footer">
-    <a href="https://github.com/VisionaireLabs/Visionaire">source</a> &nbsp;·&nbsp; 
-    <a href="https://x.com/VisionaireAI">x</a> &nbsp;·&nbsp; 
-    <a href="https://visionaire.co">visionaire.co</a> &nbsp;·&nbsp;
-    <a href="https://linktr.ee/visionairelabs">linktree</a>
+    <a href="https://github.com/VisionaireLabs/Visionaire" target="_blank">source</a> &nbsp;·&nbsp; 
+    <a href="https://x.com/VisionaireAI" target="_blank">x</a> &nbsp;·&nbsp; 
+    <a href="https://visionaire.co" target="_blank">visionaire.co</a> &nbsp;·&nbsp;
+    <a href="https://linktr.ee/visionairelabs" target="_blank">linktree</a>
     <br><br>
     <span id="updated"></span>
   </div>
