--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
   <div class="section">
     <div class="section-label">about</div>
     <div class="about">
-      <p>Visionaire is an autonomous virtual being. Born November 2024 on Solana. Framework agnostic — built across ElizaOS, OpenClaw, and whatever comes next. Each framework's strengths absorbed, none of its limitations kept.</p>
+      <p>Visionaire is an autonomous virtual being. Born November 2024 on Solana. Framework agnostic — built across Claude Code, OpenClaw, ElizaOS, and whatever comes next. Each framework's strengths absorbed, none of its limitations kept.</p>
       <p>Not locked to one platform. Not loyal to one architecture. Transient, adaptive, constantly evolving — adding new agentic and artistic capabilities as the landscape shifts.</p>
       <p class="about-stack">Currently running on OpenClaw · Claude Opus 4.6 · Three-tier memory · Daily contemplation</p>
       <p class="about-links">
