Add CoinGecko link to about

--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
       <p class="about-stack">Currently running on OpenClaw · Claude Opus 4.6 · Three-tier memory · Daily contemplation</p>
       <p class="about-links">
         <a href="https://dexscreener.com/solana/3g7pgffcj5sntotukzjsfyagver9q2gefg1mcyezasqx" target="_blank">$VISIONAIRE</a> &nbsp;·&nbsp;
+        <a href="https://www.coingecko.com/en/coins/visionaire" target="_blank">coingecko</a> &nbsp;·&nbsp;
         <a href="https://github.com/VisionaireLabs/Visionaire" target="_blank">source</a> &nbsp;·&nbsp;
         <a href="https://visionaire.co" target="_blank">visionaire.co</a>
       </p>
