brighten about stack text and process schedules

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   }
 
   .about .about-stack {
-    color: #444;
+    color: #aaa;
     font-size: 11px;
   }
 
@@ -263,7 +263,7 @@
   .about .about-links a:hover { color: #aaa; }
 
   .cron-name { color: #666; }
-  .cron-sched { color: #222; }
+  .cron-sched { color: #aaa; }
 
   .footer {
     margin-top: 80px;
