restore all CSS brightening + CNAME

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     font-weight: 400;
     letter-spacing: 4px;
     text-transform: uppercase;
-    color: #333;
+    color: #ccc;
     margin-bottom: 24px;
   }
 
@@ -72,7 +72,7 @@
 
   .stat .lbl {
     font-size: 10px;
-    color: #333;
+    color: #aaa;
     text-transform: uppercase;
     letter-spacing: 2px;
     margin-top: 4px;
@@ -87,7 +87,7 @@
     font-weight: 400;
     letter-spacing: 3px;
     text-transform: uppercase;
-    color: #222;
+    color: #aaa;
     margin-bottom: 24px;
   }
 
@@ -123,11 +123,11 @@
 
   .feed-time {
     font-size: 10px;
-    color: #222;
+    color: #aaa;
   }
 
   .feed-text {
-    color: #777;
+    color: #bbb;
     font-weight: 300;
   }
 
@@ -141,7 +141,7 @@
   .entity-row:last-child { border-bottom: none; }
 
   .entity-name { color: #ccc; font-weight: 400; }
-  .entity-meta { color: #333; }
+  .entity-meta { color: #999; }
 
   .cron-row {
     display: flex;
@@ -161,7 +161,7 @@
 
   .contemplation-day {
     font-size: 10px;
-    color: #333;
+    color: #aaa;
     text-transform: uppercase;
     letter-spacing: 2px;
     margin-bottom: 20px;
@@ -174,14 +174,14 @@
   .contemplation-section h3 {
     font-size: 11px;
     font-weight: 500;
-    color: #444;
+    color: #ddd;
     text-transform: uppercase;
     letter-spacing: 2px;
     margin-bottom: 12px;
   }
 
   .contemplation-section p {
-    color: #888;
+    color: #bbb;
     line-height: 1.9;
     margin-bottom: 10px;
   }
@@ -219,7 +219,7 @@
   }
 
   .contemplation-decision p {
-    color: #999;
+    color: #bbb;
     line-height: 1.9;
     margin-bottom: 8px;
   }
@@ -232,7 +232,7 @@
   }
 
   .contemplation-meta {
-    color: #333;
+    color: #999;
     font-style: italic;
     margin-top: 24px;
     padding-top: 16px;
@@ -246,7 +246,7 @@
   }
 
   .about .about-stack {
-    color: #aaa;
+    color: #ddd;
     font-size: 11px;
   }
 
