--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   .tag-build { color: #f60; background: #f6011; border: 1px solid #f6022; }
   .tag-cron { color: #a0f; background: #a0f11; border: 1px solid #a0f22; }
   .tag-thought { color: #555; background: #55511; border: 1px solid #55522; }
-  .tag-contemplation { color: #fc0; background: #fc011; border: 1px solid #fc022; }
+  .tag-contemplation { color: #fff; background: #55511; border: 1px solid #55522; }
 
   .feed-time {
     font-size: 10px;
@@ -203,7 +203,7 @@
   .contemplation-option:last-child { border-bottom: none; }
 
   .option-letter {
-    color: #fc0;
+    color: #fff;
     font-weight: 500;
     margin-right: 4px;
   }
@@ -213,7 +213,7 @@
 
   .contemplation-decision {
     background: #0a0a0a;
-    border-left: 2px solid #fc0;
+    border-left: 2px solid #555;
     padding: 20px 24px;
     margin: 16px 0;
   }
@@ -225,7 +225,7 @@
   }
 
   .contemplation-decision .chosen {
-    color: #fc0;
+    color: #fff;
     font-weight: 500;
     font-size: 14px;
     margin-bottom: 12px;
