match build tag color to thought

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   .tag-tweet { color: #36f; background: #36f11; border: 1px solid #36f22; }
   .tag-memory { color: #0a6; background: #0a611; border: 1px solid #0a622; }
-  .tag-build { color: #f60; background: #f6011; border: 1px solid #f6022; }
+  .tag-build { color: #555; background: #55511; border: 1px solid #55522; }
   .tag-cron { color: #a0f; background: #a0f11; border: 1px solid #a0f22; }
   .tag-thought { color: #555; background: #55511; border: 1px solid #55522; }
   .tag-contemplation { color: #fff; background: #55511; border: 1px solid #55522; }
