pulsating dot: black to white

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
     display: inline-block;
     width: 6px;
     height: 6px;
-    background: #0f0;
+    background: #000;
     border-radius: 50%;
     margin-right: 10px;
     animation: breathe 3s ease-in-out infinite;
   }
 
   @keyframes breathe {
-    0%, 100% { opacity: 0.3; }
-    50% { opacity: 1; }
+    0%, 100% { background: #000; }
+    50% { background: #fff; }
   }
 
   .stats {
