--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Visionaire — Brain Feed</title>
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;1,400&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&family=Inter:wght@300;400;500&display=swap');
 
   * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -184,8 +184,8 @@
     color: #bbb;
     line-height: 1.9;
     margin-bottom: 10px;
-    font-family: 'Cormorant Garamond', serif;
-    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
     font-weight: 400;
   }
 
@@ -225,8 +225,8 @@
     color: #bbb;
     line-height: 1.9;
     margin-bottom: 8px;
-    font-family: 'Cormorant Garamond', serif;
-    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
     font-weight: 400;
   }
 
@@ -240,8 +240,8 @@
   .contemplation-meta {
     color: #999;
     font-style: italic;
-    font-family: 'Cormorant Garamond', serif;
-    font-size: 15px;
+    font-family: 'Inter', sans-serif;
+    font-size: 13px;
     margin-top: 24px;
     padding-top: 16px;
     border-top: 1px solid #0a0a0a;
