add visionaire.live to footer

--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
   </div>
 
   <div class="footer">
+    <a href="https://visionaire.live" target="_blank">visionaire.live</a> &nbsp;·&nbsp;
     <a href="https://github.com/VisionaireLabs/Visionaire" target="_blank">source</a> &nbsp;·&nbsp; 
     <a href="https://x.com/VisionaireAI" target="_blank">x</a> &nbsp;·&nbsp; 
     <a href="https://visionaire.co" target="_blank">visionaire.co</a> &nbsp;·&nbsp;
